修復 協尋刊登

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -152,37 +152,42 @@
             </div>
         </div>
         <div class="col-md-12 col-lg-6 half p-5 ftco-animate">
-            <h2 class="m-3">協尋資料</h2>
-            <div class="row">
+            <h2  class="m-3">協尋資料</h2>
+            <div id="missingInput" class="row">
                 <div class="col-md-12">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingKind" type="text" class="form-control" placeholder="種類"/>
+                            <input id="kind" type="text" class="form-control" placeholder="種類"/>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingVariety" type="text" class="form-control" placeholder="品種">
+                            <input id="variety" type="text" class="form-control" placeholder="品種">
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingSex" type="text" class="form-control" placeholder="性別">
+                            <input id="sex" type="text" class="form-control" placeholder="性別">
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingBody" type="text" class="form-control" placeholder="體型">
+                            <input id="name" type="text" class="form-control" placeholder="名字">
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingColor" type="text" class="form-control" placeholder="顏色">
+                            <input id="bodysize" type="text" class="form-control" placeholder="體型">
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingAge" type="text" class="form-control" placeholder="年紀">
+                            <input id="color" type="text" class="form-control" placeholder="顏色">
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <input id="age" type="text" class="form-control" placeholder="年紀">
                         </div>
                     </div>
                     <div class="col-md-12">
@@ -192,18 +197,18 @@
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingPlace" type="text" class="form-control" placeholder="走失地點">
+                            <input id="area" type="text" class="form-control" placeholder="走失地點">
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
-                            <input id="missingRemark" type="text" class="form-control" placeholder="備註">
+                            <input id="description" type="text" class="form-control" placeholder="備註">
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="form-group">
                             <label>
-                                <input type="file" id="missingAnimalPhoto"/>
+                                <input type="file" id="animalPhoto"/>
                             </label>
                         </div>
                     </div>
