交流區-瀏覽區版面完成

--- a/src/main/resources/templates/animal_funeral.html
+++ b/src/main/resources/templates/animal_funeral.html
@@ -102,6 +102,14 @@
             /*border-bottom-left-radius: 0.5em !important;*/
         }
 
+        /*彈出式互動視窗背景*/
+        .modal-content.modal-bg {
+            background-image: url('/images/_section_bg.png');
+            background-repeat: repeat;
+            background-position: center;
+            /*background-color: white;*/
+        }
+
         .page_show {
             /*padding: 40px 0;*/
             text-align: center;
@@ -182,7 +190,7 @@
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
-                <div class="modal-content main-img">
+                <div class="modal-content modal-bg">
                     <!-- 機構名稱放在標題 -->
                     <div class="modal-header">
                         <div class="col-12 px-0 d-flex justify-content-center">
