交流區-瀏覽區版面微調

--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -151,8 +151,8 @@
             height: 250px;
             resize: none !important;
             border: none !important;
-            outline: none !important;
-            box-shadow: none !important;
+            /*outline: none !important;*/
+            /*box-shadow: none !important;*/
         }
 
         #addMsgArea {
@@ -276,7 +276,7 @@
                         <div class="col-12 px-0 d-flex justify-content-center">
                             <div class="modal-title d-flex">
                                 <!-- 瀏覽文章分類區塊 (編輯時) -->
-                                <select id="articleTypeEdit" class="custom-select text-center ftco-animate"
+                                <select id="articleTypeEdit" class="custom-select text-center"
                                         style="display: none;">
                                     <option value="綜合">綜合</option>
                                     <option value="問題">問題</option>
@@ -287,7 +287,7 @@
                                     <option value="閒聊">閒聊</option>
                                     <option value="創作">創作</option>
                                 </select>
-                                <h5 id="articleType" class="my-0 font-weight-bold text-center ftco-animate">
+                                <h5 id="articleType" class="my-0 font-weight-bold text-center">
                                     文章分類</h5>
                                 <h3 id="articleTitle" class="my-0 mx-2 font-weight-bold text-center">文章標題</h3>
                             </div>
@@ -302,7 +302,7 @@
                          style="border-top: 3px dotted grey; border-bottom: 3px dotted grey;">
                         <div class="row mx-auto mb-3 p-3 col-lg-10 col-12 justify-content-center div-style">
                             <!-- 瀏覽文章內文區塊 -->
-                            <div class="row m-0 p-0 col-12" style="border-bottom: 1px solid lightgrey;">
+                            <div class="row m-0 px-3 col-12" style="border-bottom: 1px solid lightgrey;">
                                 <div class="row col-6 mx-0 mb-2 p-0 font-weight-bold justify-content-start">
                                     <!-- 使用者名稱 -->
                                     <span id="articleUserName">使用者名稱</span>
